Update nb-NO l10n

--- a/nb-NO/security/manager/chrome/pipnss/nsserrors.properties
+++ b/nb-NO/security/manager/chrome/pipnss/nsserrors.properties
@@ -1,32 +1,32 @@
-SSL_ERROR_EXPORT_ONLY_SERVER=Klarte ikke kommunisere sikkert. Den andre verten støtter ikke sterk kryptering.
-SSL_ERROR_US_ONLY_SERVER=Klarte ikke kommunisere sikkert. Verten krever en type sterk kryptering som ikke støttes.
-SSL_ERROR_NO_CYPHER_OVERLAP=Kan ikke kommunisere sikkert med verten: Støtter ingen felles krypteringsalgoritme(r).
-SSL_ERROR_NO_CERTIFICATE=Klarte ikke finne sertifikatet eller nøkkelen som er nødvendig for autentisering.
-SSL_ERROR_BAD_CERTIFICATE=Klarte ikke å kommunisere sikkert med verten: Vertens sertifikat ble avslått.
+SSL_ERROR_EXPORT_ONLY_SERVER=Klarte ikke kommunisere sikkert. Motparten støtter ikke sterk kryptering.
+SSL_ERROR_US_ONLY_SERVER=Klarte ikke kommunisere sikkert. Motparten krever en type sterk kryptering som ikke støttes.
+SSL_ERROR_NO_CYPHER_OVERLAP=Kan ikke kommunisere sikkert med motparten: Har ingen felles krypteringsalgoritme.
+SSL_ERROR_NO_CERTIFICATE=Klarte ikke finne sertifikatet eller nøkkelen som er nødvendig for å autentisere.
+SSL_ERROR_BAD_CERTIFICATE=Klarte ikke å kommunisere sikkert med motparten: Motpartens sertifikat ble avslått.
 SSL_ERROR_BAD_CLIENT=Tjeneren mottok ugyldig data fra klienten.
 SSL_ERROR_BAD_SERVER=Klienten mottok ugyldig data fra tjeneren.
 SSL_ERROR_UNSUPPORTED_CERTIFICATE_TYPE=Ustøttet sertifikattype.
-SSL_ERROR_UNSUPPORTED_VERSION=Verten bruker en ustøttet versjon av sikkerhetsprotokollen.
+SSL_ERROR_UNSUPPORTED_VERSION=Motparten bruker en ustøttet versjon av sikkerhetsprotokollen.
 SSL_ERROR_WRONG_CERTIFICATE=Klientautentisering feilet: Privat nøkkel i databasen stemmer ikke med den offentlige nøkkelen i sertifikatsdatabasen.
-SSL_ERROR_BAD_CERT_DOMAIN=Klarte ikke kommunisere sikkert med verten: Forespurt domene stemmer ikke med tjenerens sertifikat.
-SSL_ERROR_SSL2_DISABLED=Verten støtter bare SSL versjon 2, som er avslått lokalt.
+SSL_ERROR_BAD_CERT_DOMAIN=Klarte ikke kommunisere sikkert med verten: Domenenavnet stemmer ikke med tjenerens sertifikat.
+SSL_ERROR_SSL2_DISABLED=Motparten støtter bare SSL versjon 2, som er avslått lokalt.
 SSL_ERROR_BAD_MAC_READ=SSL mottok et dokument med ugyldig meldingsautentiseringskode.
-SSL_ERROR_BAD_MAC_ALERT=SSL-verten rapporterte en ugyldig meldingsautentiseringskode.
-SSL_ERROR_BAD_CERT_ALERT=SSL-verten klarte ikke kontrollere sertifikatet ditt.
-SSL_ERROR_REVOKED_CERT_ALERT=SSL-verten avslo sertifikatet ditt fordi det er tilbakekalt.
-SSL_ERROR_EXPIRED_CERT_ALERT=SSL-verten avslo sertifikatet ditt fordi det er utgått på dato.
+SSL_ERROR_BAD_MAC_ALERT=SSL-motparten rapporterte en ugyldig meldingsautentiseringskode.
+SSL_ERROR_BAD_CERT_ALERT=SSL-motparten klarte ikke kontrollere sertifikatet ditt.
+SSL_ERROR_REVOKED_CERT_ALERT=SSL-motparten avslo sertifikatet ditt fordi det er tilbakekalt.
+SSL_ERROR_EXPIRED_CERT_ALERT=SSL-motparten avslo sertifikatet ditt fordi det er utgått på dato.
 SSL_ERROR_SSL_DISABLED=Klarte ikke koble til: SSL er avslått.
 SSL_ERROR_FORTEZZA_PQG=Klarte ikke koble til: SSL-verten er i et annet FORTEZZA-domene.
-SSL_ERROR_UNKNOWN_CIPHER_SUITE=Et ukjent SSL-ciphersuite ble forespurt.
-SSL_ERROR_NO_CIPHERS_SUPPORTED=Ingen ciphersuiter fins og er påslått i dette programmet.
-SSL_ERROR_BAD_BLOCK_PADDING=SSL mottok et dokument med ugyldig blokkfyll.
+SSL_ERROR_UNKNOWN_CIPHER_SUITE=En ukjent SSL-chiffreringssamling ble forespurt.
+SSL_ERROR_NO_CIPHERS_SUPPORTED=Ingen chiffreringssamlinger fins og er påslått i dette programmet.
+SSL_ERROR_BAD_BLOCK_PADDING=SSL mottok et dokument med ugyldig blokkutfylling.
 SSL_ERROR_RX_RECORD_TOO_LONG=SSL mottok et dokument som er lengre enn det som er tillatt.
 SSL_ERROR_TX_RECORD_TOO_LONG=SSL forsøkte å sende et dokument som er lengre enn det som er tillatt.
 SSL_ERROR_RX_MALFORMED_HELLO_REQUEST=SSL mottok en Hello-forespørsel med feil format i håndhilsingen.
-SSL_ERROR_RX_MALFORMED_CLIENT_HELLO=SSL mottok en klient Hello-håndhilsing med feil format.
-SSL_ERROR_RX_MALFORMED_SERVER_HELLO=SSL mottok en tjener Hello-håndhilsing med feil format.
+SSL_ERROR_RX_MALFORMED_CLIENT_HELLO=SSL mottok en klient-Hello-håndhilsing med feil format.
+SSL_ERROR_RX_MALFORMED_SERVER_HELLO=SSL mottok en tjener-Hello-håndhilsing med feil format.
 SSL_ERROR_RX_MALFORMED_CERTIFICATE=SSL mottok en sertifikat-håndhilsen med feil format.
-SSL_ERROR_RX_MALFORMED_SERVER_KEY_EXCH=SSL mottok en tjener nøkkelutveksling-håndhilsen med feil format.
+SSL_ERROR_RX_MALFORMED_SERVER_KEY_EXCH=SSL mottok en tjenernøkkelutveksling-håndhilsen med feil format.
 SSL_ERROR_RX_MALFORMED_CERT_REQUEST=SSL mottok en sertifikatforespørsel-håndhilsen med feil format.
 SSL_ERROR_RX_MALFORMED_HELLO_DONE=SSL mottok en tjener Hallo-Fullført håndhilsen med feil format.
 SSL_ERROR_RX_MALFORMED_CERT_VERIFY=SSL mottok en melding med ugyldig Certificate Verify-håndhilsen.
@@ -65,17 +65,17 @@ SSL_ERROR_SIGN_HASHES_FAILURE=Klarte ikke digitalt signere data som er nødvendi
 SSL_ERROR_EXTRACT_PUBLIC_KEY_FAILURE=SSL klarte ikke pakke ut den offentlige nøkkelen fra motpartens sertifikat.
 SSL_ERROR_SERVER_KEY_EXCHANGE_FAILURE=En uspesifisert feil oppstod under SSL Server Key Exchange-håndhilsenen.
 SSL_ERROR_CLIENT_KEY_EXCHANGE_FAILURE=En uspesifisert feil oppstod under SSL Client Key Exchange-håndhilsenen.
-SSL_ERROR_ENCRYPTION_FAILURE=Krypteringsalgoritme feilet i valgt cipher-system.
-SSL_ERROR_DECRYPTION_FAILURE=Dekrypteringsalgoritme feilet i valgt cipher-system.
+SSL_ERROR_ENCRYPTION_FAILURE=Krypteringsalgoritme feilet i valgt chiffreringssamling.
+SSL_ERROR_DECRYPTION_FAILURE=Dekrypteringsalgoritme feilet i valgt chiffreringssamling.
 SSL_ERROR_SOCKET_WRITE_FAILURE=Forsøk på å skrive kryptert data til underliggende socket feilet.
 SSL_ERROR_MD5_DIGEST_FAILURE=MD5-fingeravtrykksfunksjon feilet.
 SSL_ERROR_SHA_DIGEST_FAILURE=SHA-1-fingeravtrykksfunksjon feilet.
 SSL_ERROR_MAC_COMPUTATION_FAILURE=MAC-komputasjon feilet.
 SSL_ERROR_SYM_KEY_CONTEXT_FAILURE=Klarte ikke opprette symmetrisk nøkkel-innhold.
 SSL_ERROR_SYM_KEY_UNWRAP_FAILURE=Klarte ikke pakke ut symmetrisk nøkkel i Client Key Exchange-meldingen.
-SSL_ERROR_PUB_KEY_SIZE_LIMIT_EXCEEDED=SSL-tjeneren forsøkte å bruke innenriks-grads offentlig nøkkel med eksport cipher-system.
+SSL_ERROR_PUB_KEY_SIZE_LIMIT_EXCEEDED=SSL-tjeneren forsøkte å bruke innenriks-grads offentlig nøkkel med eksport-chiffreringssamling.
 SSL_ERROR_IV_PARAM_FAILURE=PKCS11-kode klarte ikke konvertere en IV til param.
-SSL_ERROR_INIT_CIPHER_SUITE_FAILURE=Klarte ikke initialisere valgt cipher-system.
+SSL_ERROR_INIT_CIPHER_SUITE_FAILURE=Klarte ikke initialisere valgt chiffreringssamling.
 SSL_ERROR_SESSION_KEY_GEN_FAILURE=Klienten klarte ikke opprette øktnøkler for SSL-økten.
 SSL_ERROR_NO_SERVER_KEY_FOR_ALG=Tjeneren har ingen nøkkel for den forsøkte nøkkelutvekslingsalgoritmen.
 SSL_ERROR_TOKEN_INSERTION_REMOVAL=Et PKCS#11 element ble satt inn eller slettet mens operasjonen var aktiv.
@@ -107,11 +107,11 @@ SSL_ERROR_BAD_CERT_HASH_VALUE_ALERT=SSL-motparten rapporterer om ugyldig listeve
 SEC_ERROR_IO=En I/O-feil oppstod under sikkerhetsautorisasjon.
 SEC_ERROR_LIBRARY_FAILURE=feil i sikkerhetsbibliotek.
 SEC_ERROR_BAD_DATA=sikkehetsbibliotek: mottok ugyldig data.
-SEC_ERROR_OUTPUT_LEN=sikkehetsbibliotek: feil utdatalengde.
+SEC_ERROR_OUTPUT_LEN=sikkehetsbibliotek: Feil utdatalengde.
 SEC_ERROR_INPUT_LEN=sikkerhetsbiblioteket oppdaget feil i inndatalengde.
-SEC_ERROR_INVALID_ARGS=sikkehetsbibliotek: ugyldige argumenter.
+SEC_ERROR_INVALID_ARGS=sikkehetsbibliotek: Ugyldige argumenter.
 SEC_ERROR_INVALID_ALGORITHM=sikkehetsbibliotek: ugyldig algoritme.
-SEC_ERROR_INVALID_AVA=sikkehetsbibliotek: ugyldig AVA.
+SEC_ERROR_INVALID_AVA=sikkehetsbibliotek: Ugyldig AVA.
 SEC_ERROR_INVALID_TIME=Tidsstreng har ugyldig format.
 SEC_ERROR_BAD_DER=sikkerhetsbibliotek: ugyldig formatert DER-kodet melding.
 SEC_ERROR_BAD_SIGNATURE=Motpartens sertifikat har ugyldig signatur.
@@ -121,8 +121,8 @@ SEC_ERROR_UNKNOWN_ISSUER=Motpartens sertifikatutsteder ble ikke gjenkjent.
 SEC_ERROR_BAD_KEY=Motpartens offentlige nøkkel er ugyldig.
 SEC_ERROR_BAD_PASSWORD=Oppgitt sikkerhetspassord er feil.
 SEC_ERROR_RETRY_PASSWORD=Nytt passord er ugyldig.  Prøv igjen.
-SEC_ERROR_NO_NODELOCK=sikkerhetsbibliotek: ingen nodelock.
-SEC_ERROR_BAD_DATABASE=sikkerhetsbibliotek: ugyldig database.
+SEC_ERROR_NO_NODELOCK=sikkerhetsbibliotek: Ingen nodelock.
+SEC_ERROR_BAD_DATABASE=sikkerhetsbibliotek: Ugyldig database.
 SEC_ERROR_NO_MEMORY=sikkerhetsbibliotek: feil i minnetildeling.
 SEC_ERROR_UNTRUSTED_ISSUER=Motpartens sertifikatutsteder er merket som ikke tiltrodd av brukeren.
 SEC_ERROR_UNTRUSTED_CERT=Motpartens sertifikat er merket som ikke tiltrodd av brukeren.
@@ -158,9 +158,9 @@ XP_SEC_FORTEZZA_BAD_CARD=Fortezza-kort har ikke blitt ordentlig initialisert.  F
 XP_SEC_FORTEZZA_NO_CARD=Ingen Fortezza-kort ble funnet
 XP_SEC_FORTEZZA_NONE_SELECTED=Ingen Fortezza-kort er valgt
 XP_SEC_FORTEZZA_MORE_INFO=Velg en personlighet å hente mer informasjon om
-XP_SEC_FORTEZZA_PERSON_NOT_FOUND=Personaliteten ble ikke funnet
+XP_SEC_FORTEZZA_PERSON_NOT_FOUND=Personlighet ble ikke funnet
 XP_SEC_FORTEZZA_NO_MORE_INFO=Har ikke mer informasjon om den personligheten
-XP_SEC_FORTEZZA_BAD_PIN=Ugyldig Pin
+XP_SEC_FORTEZZA_BAD_PIN=Ugyldig PIN
 XP_SEC_FORTEZZA_PERSON_ERROR=Klarte ikke initialsere Fortezza-personligheter.
 SEC_ERROR_NO_KRL=Ingen KRL-er ble funnet for dette nettstedets sertifikat.
 SEC_ERROR_KRL_EXPIRED=KRL-en for dette nettstedets sertifikat er utgått på dato.
@@ -176,9 +176,9 @@ SEC_ERROR_CERT_NICKNAME_COLLISION=Et sertifikat med samme kallenavn fins allered
 SEC_ERROR_KEY_NICKNAME_COLLISION=En nøkkel med samme kallenavn fins allerede.
 SEC_ERROR_SAFE_NOT_CREATED=en feil oppstod under opprettelse av trygt objektt
 SEC_ERROR_BAGGAGE_NOT_CREATED=en feil oppstod under opprettelse av bagasjeobjekt
-XP_JAVA_REMOVE_PRINCIPAL_ERROR=Klarte ikke fjerne principal
+XP_JAVA_REMOVE_PRINCIPAL_ERROR=Klarte ikke fjerne kontohaver
 XP_JAVA_DELETE_PRIVILEGE_ERROR=Klarte ikke slette privilegiet
-XP_JAVA_CERT_NOT_EXISTS_ERROR=Denne principalen har ikke et sertifikat
+XP_JAVA_CERT_NOT_EXISTS_ERROR=Denne kontohaveren har ikke et sertifikat
 SEC_ERROR_BAD_EXPORT_ALGORITHM=Påkrevd algoritme er ikke tillatt.
 SEC_ERROR_EXPORTING_CERTIFICATES=Feil ved eksport av sertifikater.
 SEC_ERROR_IMPORTING_CERTIFICATES=Feil ved import av sertifikater.
@@ -219,8 +219,8 @@ SEC_ERROR_CKL_CONFLICT=Ny CKL har forskjellig utsteder enn nåværende CKL.  Sle
 SEC_ERROR_CERT_NOT_IN_NAME_SPACE=Sertifikatsutsteder for dette sertifikatet har ikke tillatelse til å utstede et sertifikat med dette navnet.
 SEC_ERROR_KRL_NOT_YET_VALID=Nøkkeltilbakekallingslisten for dette sertifikatet er ikke gyldig ennå.
 SEC_ERROR_CRL_NOT_YET_VALID=Nøkkeltilbakekallingslisten for dette sertifikatet er ikke gyldig ennå.
-SEC_ERROR_UNKNOWN_CERT=Det forespurte sertifikatet bl ikke funnet.
-SEC_ERROR_UNKNOWN_SIGNER=Signererens sertifikat ble ikke funnet.
+SEC_ERROR_UNKNOWN_CERT=Klarte ikke finne det forespurte sertifikatet.
+SEC_ERROR_UNKNOWN_SIGNER=Klarte ikke finne signererens sertifikat.
 SEC_ERROR_CERT_BAD_ACCESS_LOCATION=Adressen til sertifikatsstatustjeneren har ugyldig format.
 SEC_ERROR_OCSP_UNKNOWN_RESPONSE_TYPE=Klarte ikke dekode OCSP-responsen; den har ugyldig type.
 SEC_ERROR_OCSP_BAD_HTTP_RESPONSE=OCSP-tjeneren returnerte uventet/ugyldig HTTP-data.
@@ -255,7 +255,7 @@ SEC_ERROR_CRL_INVALID_VERSION=Utstederens tilbakekallingsliste har ugyldig versj
 SEC_ERROR_CRL_V1_CRITICAL_EXTENSION=Utstederens V1 tilbakekallingsliste har en kritisk utvidelse.
 SEC_ERROR_CRL_UNKNOWN_CRITICAL_EXTENSION=Utstederens V2 tilbakekallingsliste har en ukjent kritisk utvidelse.
 SEC_ERROR_UNKNOWN_OBJECT_TYPE=Ukjent objekttype oppgitt.
-SEC_ERROR_INCOMPATIBLE_PKCS11=PKCS #11 driver krenker spesifikasjonen på en ukompatibel måte.
+SEC_ERROR_INCOMPATIBLE_PKCS11=PKCS #11-driveren krenker spesifikasjonen på en ukompatibel måte.
 SEC_ERROR_NO_EVENT=Ingen nye plasshendelser er tilgjengelig nå.
 SEC_ERROR_CRL_ALREADY_EXISTS=CRL-en finnes allerede.
 SEC_ERROR_NOT_INITIALIZED=NSS er ikke initialisert.
