--- a/nb-NO/security/manager/chrome/pippki/pippki.properties
+++ b/nb-NO/security/manager/chrome/pippki/pippki.properties
@@ -85,7 +85,7 @@ resetPreferences=Bruk denne knappen for å tilbakestille %Ss sikkerhetsinnstilli
 
 #Cert verification
 certVerified=Sertifikatet er godkjent for følgende bruk\:
-certNotVerified_CertRevoked=Klarte ikke bekrefte sertifikatet fordi det har blitt opphevet.
+certNotVerified_CertRevoked=Klarte ikke bekrefte sertifikatet fordi det er tilbakekalt.
 certNotVerified_CertExpired=Klarte ikke bekrefte sertifikatet fordi det har utgått.
 certNotVerified_CertNotTrusted=Klarte ikke bekrefte sertifikatet fordi det er ikke tiltrodd.
 certNotVerified_IssuerNotTrusted=Klarte ikke bekrefte sertifikatet fordi utstederen ikke er tiltrodd.
@@ -94,8 +94,8 @@ certNotVerified_CAInvalid=Klarte ikke kontrollere sertifikatet fordi CA-sertifik
 certNotVerified_Unknown=Klarte ikke kontrollere sertifikatet av ukjente grunner.
 
 #Client auth
-clientAuthMessage1=Organisasjon\: «%S»
-clientAuthMessage2=Utstedt under\: «%S»
+clientAuthMessage1=Organisasjon: «%S»
+clientAuthMessage2=Utstedt under: «%S»
 
 #Page Info
 pageInfo_SiteNotVerified=Klarte ikke bekrefte nettstedets identitet
@@ -116,7 +116,7 @@ pageInfo_MixedContent=Innholdet er delvis kryptert
 pageInfo_Privacy_Mixed1=Deler av nettsiden du ser på ble ikke kryptert før den ble overført over Internett.
 
 #Cert Viewer
-certDetails=Sertifikatvisning
+certDetails=Sertifikatviser:
 notPresent=<Ikke en del av sertifikatet>
 unknownIssuer=<Ukjent utsteder>
 
@@ -127,12 +127,12 @@ password_not_set=(ikke satt)
 failed_pw_change=Klarte ikke endre hovedpassordet.
 incorrect_pw=Du skrev ikke inn det korrekte hovedpassordet. Prøv igjen.
 pw_change_ok=Hovedpassord ble endret.
-pw_erased_ok=Advarsel\! Du har slettet hovedpassordet.
-pw_not_wanted=Advarsel\! Du har ikke valgt å bruke et hovedpassord.
+pw_erased_ok=Advarsel! Du har slettet hovedpassordet.
+pw_not_wanted=Advarsel! Du har ikke valgt å bruke et hovedpassord.
 pw_empty_warning=Dine lagrede nett- og e-postpassord, skjemadata og private nøkler er ikke beskyttet lenger.
 pw_change2empty_in_fips_mode=Du er nå i FIPS-modus. FIPS krever at du setter et hovedpassord.
 login_failed=Klarte ikke logge inn
-loadPK11TokenDialog=Velg en PKCS\#11-enhet å laste inn
+loadPK11TokenDialog=Velg en PKCS#11-enhet å laste inn
 devinfo_modname=Modul
 devinfo_modpath=Sti
 devinfo_label=Merkelapp
@@ -143,7 +143,7 @@ devinfo_fwversion=FW-versjon
 devinfo_status=Status
 devinfo_desc=Beskrivelse
 devinfo_stat_disabled=Avslått
-devinfo_stat_notpresent=Ikke tilstede
+devinfo_stat_notpresent=Ikke oppgitt
 devinfo_stat_uninitialized=Uinitialisert
 devinfo_stat_notloggedin=Ikke innlogget
 devinfo_stat_loggedin=Innlogget
@@ -154,7 +154,7 @@ fips_nonempty_password_required=FIPS-modus krever at du har et hovedpassord for 
 
 # CRL next update.
 crlNextUpdateMsg1=%S kan ikke opprette en kryptert tilkobling til «%S».
-crlNextUpdateMsg2=Listen over opphevede sertifikater (CRL) fra «%S» må oppdateres.
+crlNextUpdateMsg2=Listen over tilbakekalte sertifikater (CRL) fra «%S» må oppdateres.
 NoUpdateFailure=Ingen
 lastFetchUrlLabel=URL ble opprinnelig hentet fra
 advertisedUrlLabel=URL anbefalt av CA
@@ -174,17 +174,17 @@ crlAutoupdateEnabled=Påslått
 crlAutoupdateNotEnabled=Ikke påslått
 crlAutoupdateOk=OK
 crlAutoupdateFailed=Feilet
-crlImportNewCRLTitle=Importer Certificate Revocation List
+crlImportNewCRLTitle=Importer tilbakekallingsliste (CRL)
 crlImportNewCRLLabel=Importer CRL fra:
 
 #Import certificate(s) file dialog
 importEmailCertPrompt=Velg fil som inneholder e-postsertifikatet du vil importere
-importCACertsPrompt=Velg fil som inneholder CA-sertifikat(ene) du vil importere
+importCACertsPrompt=Velg fil som inneholder CA-sertifikatene du vil importere
 importServerCertPrompt=Velg fil med tjenersertifikat som du vil importere
 file_browse_Certificate_spec=Sertifikatfiler
 
 # Form Signing confirmation prompt
-formSigningIntro=Nettstedet «%S» har forespurt at du signerer den følgende meldingen\:
+formSigningIntro=Nettstedet «%S» har forespurt at du signerer den følgende meldingen:
 
 # Cert export
 SaveCertAs=Lagre sertifikat til fil
