--- a/nb-NO/security/manager/chrome/pipnss/pipnss.properties
+++ b/nb-NO/security/manager/chrome/pipnss/pipnss.properties
@@ -121,27 +121,27 @@ CertDumpUserID=UID
 CertDumpPK9Email=E
 CertDumpAVADN=DN
 CertDumpAVADC=DC
-CertDumpValidity=Validitet
+CertDumpValidity=Gyldighet
 CertDumpNotBefore=Ikke før
 CertDumpNotAfter=Ikke etter
-CertDumpSPKI=Subjekt offentlig nøkkel info
-CertDumpSPKIAlg=Subjekt fellesnøkkel-algoritme
+CertDumpSPKI=Subjektets offentlig nøkkel-info
+CertDumpSPKIAlg=Subjektets offentlig nøkkel-algoritme
 CertDumpAlgID=Algoritmeidentifikator
 CertDumpParams=Algoritmeparametere
 CertDumpRSAEncr=PKCS #1 RSA-kryptering
 CertDumpRSATemplate=Modulus (%S biter):\n%S\nEkponent (%S biter):\n%S
 CertDumpECTemplate=Nøkkelstørrelse: %S biter\nBasispunktlengde: %S biter\nOffentlig verdi:\n%S
-CertDumpIssuerUniqueID=Utsteder unik ID
+CertDumpIssuerUniqueID=Utsteders unike ID
 CertDumpSubjPubKey=Subjektets offentlige nøkkel
-CertDumpSubjectUniqueID=Subject unik ID
+CertDumpSubjectUniqueID=Subjektets unike ID
 CertDumpExtensions=Utvidelser
 CertDumpCertType=Netscape sertifikattype
 CertDumpNSCertExtBaseUrl=URL til Netscape sertifikatutvidelse
-CertDumpNSCertExtRevocationUrl=URL til oppheving av Netscape-sertifikat
-CertDumpNSCertExtCARevocationUrl=URL til Netscape opphevingsliste for sertifikater
-CertDumpNSCertExtCertRenewalUrl=URL til Netscape sertifikatsoppdatering
-CertDumpNSCertExtCAPolicyUrl=URL til Netscape sertifikatsautoritetsregler
-CertDumpNSCertExtSslServerName=Netscape-sertifikat SSL-server
+CertDumpNSCertExtRevocationUrl=URL til Netscape sertifikattilbakekalling
+CertDumpNSCertExtCARevocationUrl=URL til Netscape sertifikatutsteder tilbakekalling
+CertDumpNSCertExtCertRenewalUrl=URL til Netscape sertifikatfornyelse
+CertDumpNSCertExtCAPolicyUrl=URL til Netscape sertifikatutstederregler
+CertDumpNSCertExtSslServerName=Netscape-sertifikat SSL-tjenernavn
 CertDumpNSCertExtComment=Kommentar til Netscape-sertifikat
 CertDumpNSCertExtLostPasswordUrl=URL for mistet passord for Netscape-sertifikater
 CertDumpNSCertExtCertRenewalTime=Tid for oppdatering av Netscape-sertifikater
@@ -157,9 +157,9 @@ CertDumpCrlDistPoints=CRL distribusjonspunkter
 CertDumpCertPolicies=Regler for sertifikat
 CertDumpPolicyMappings=Avbilding av sertifikatregler
 CertDumpPolicyConstraints=Sertifikatbegrensinger
-CertDumpAuthKeyID=Sertifikatutsteder nøkkelidentifikator
+CertDumpAuthKeyID=Sertifikatutsteders nøkkelidentifikator
 CertDumpExtKeyUsage=Utvidet nøkkelbruk
-CertDumpAuthInfoAccess=Tilgang til informasjon hos autoritet
+CertDumpAuthInfoAccess=Tilgang til informasjon hos utsteder
 CertDumpAnsiX9DsaSignature=ANSI X9.57 DSA-signatur
 CertDumpAnsiX9DsaSignatureWithSha1=ANSI X9.57 DSA-signatur med SHA1 Digest
 CertDumpAnsiX962ECDsaSignatureWithSha1=ANSI X9.62 ECDSA-signatur med SHA1
@@ -187,25 +187,25 @@ CertDumpEKU_1_3_6_1_5_5_7_3_3=Signering av nedlastbar kjørbar kode
 CertDumpEKU_1_3_6_1_5_5_7_3_4=E-postbeskyttelse
 CertDumpEKU_1_3_6_1_5_5_7_3_8=Tidsstempel
 CertDumpEKU_1_3_6_1_5_5_7_3_9=OCSP-signering
-CertDumpEKU_1_3_6_1_4_1_311_2_1_21=Microsoft Individual Code Signing
-CertDumpEKU_1_3_6_1_4_1_311_2_1_22=Microsoft Commercial Code Signing
-CertDumpEKU_1_3_6_1_4_1_311_10_3_1=Microsoft Trust List Signing
-CertDumpEKU_1_3_6_1_4_1_311_10_3_2=Microsoft Time Stamping
-CertDumpEKU_1_3_6_1_4_1_311_10_3_3=Microsoft Server Gated Crypto
-CertDumpEKU_1_3_6_1_4_1_311_10_3_4=Microsoft Encrypting File System
-CertDumpEKU_1_3_6_1_4_1_311_10_3_4_1=Microsoft File Recovery
-CertDumpEKU_1_3_6_1_4_1_311_10_3_5=Microsoft Windows Hardware Driver Verification
+CertDumpEKU_1_3_6_1_4_1_311_2_1_21=Microsoft Individual Code-signering
+CertDumpEKU_1_3_6_1_4_1_311_2_1_22=Microsoft Commercial Code-signering
+CertDumpEKU_1_3_6_1_4_1_311_10_3_1=Microsoft Trust List-signering
+CertDumpEKU_1_3_6_1_4_1_311_10_3_2=Microsoft tidsstempler
+CertDumpEKU_1_3_6_1_4_1_311_10_3_3=Microsoft Server Gated kryptografi
+CertDumpEKU_1_3_6_1_4_1_311_10_3_4=Microsoft kryptert filsystem
+CertDumpEKU_1_3_6_1_4_1_311_10_3_4_1=Microsoft filgjenoppretting
+CertDumpEKU_1_3_6_1_4_1_311_10_3_5=Microsoft Windows maskinvaredriver-kontroll
 CertDumpEKU_1_3_6_1_4_1_311_10_3_10=Microsoft Qualified Subordination
-CertDumpEKU_1_3_6_1_4_1_311_10_3_11=Microsoft Key Recovery
-CertDumpEKU_1_3_6_1_4_1_311_10_3_12=Microsoft Document Signing
-CertDumpEKU_1_3_6_1_4_1_311_10_3_13=Microsoft Lifetime Signing
-CertDumpEKU_1_3_6_1_4_1_311_20_2_2=Microsoft Smart Card Logon
-CertDumpEKU_1_3_6_1_4_1_311_21_6=Microsoft Key Recovery Agent
+CertDumpEKU_1_3_6_1_4_1_311_10_3_11=Microsoft nøkkelgjenoppretting
+CertDumpEKU_1_3_6_1_4_1_311_10_3_12=Microsoft dokumentsignering
+CertDumpEKU_1_3_6_1_4_1_311_10_3_13=Microsoft levetid-signering
+CertDumpEKU_1_3_6_1_4_1_311_20_2_2=Microsoft smartkort-innlogging
+CertDumpEKU_1_3_6_1_4_1_311_21_6=Microsoft nøkkelgjenopprettingsagent
 CertDumpMSCerttype=Microsoft Certificate Template-navn
 CertDumpMSNTPrincipal=Microsoft Principal-navn
 CertDumpMSCAVersion=Microsoft CA versjon
-CertDumpMSDomainGUID=Microsoft Domain GUID
-CertDumpEKU_2_16_840_1_113730_4_1=Netscape Server Gated Crypto
+CertDumpMSDomainGUID=Microsoft domene-GUID
+CertDumpEKU_2_16_840_1_113730_4_1=Netscape Server Gated kryptografi
 CertDumpRFC822Name=E-postadresse
 CertDumpDNSName=DNS-navn
 CertDumpX400Address=X.400-adresse
@@ -220,12 +220,12 @@ CertDumpUnused=Ubrukt
 CertDumpKeyCompromise=Kompromittert nøkkel
 CertDumpCACompromise=Kompromittert CA
 CertDumpAffiliationChanged=Affiliasjon endret
-CertDumpSuperseded=Superseded
-CertDumpCessation=Cessation of Operation
-CertDumpHold=Certificate Hold
+CertDumpSuperseded=Erstattet
+CertDumpCessation=Bruk er opphørt
+CertDumpHold=Sertifikatet er holdt tilbake
 CertDumpOCSPResponder=OCSP
 CertDumpCAIssuers=CA-utgivere
-CertDumpCPSPointer=Certification Practice Statement pointer
+CertDumpCPSPointer=Peker til utstedelsespraksis
 CertDumpPolicyOidEV=Utvidet Validering (EV) SSL tjenersertifikat
 CertDumpUserNotice=Brukernotis
 CertDumpLogotype=Logotype
@@ -300,14 +300,14 @@ VerifyProtectObjSign_p=Beskyttet Objekt-signerer
 VerifyObjSign_p=Objekt-signerer
 VerifyUserImport_p=Brukerimport
 VerifyCAVerifier_p=CA-verifiserer
-VerifyStatusResponder_p=Status responder
+VerifyStatusResponder_p=Status-svarer
 VerifyAnyCA_p=CA
-VerifiedTrue=true
-VerifiedFalse=false
+VerifiedTrue=sann
+VerifiedFalse=usann
 PK11BadPassword=Passordet du skrev inn er ugyldig.
 SuccessfulP12Backup=Sikkerhetskopi av sertifikater og private nøkler er utført.
 SuccessfulP12Restore=Sertifikater og private nøkler er gjenopprettet.
-PKCS12PasswordInvalid=Klarte ikke dekode PKCS #12-fil. Passordet kan være galt.
+PKCS12PasswordInvalid=Klarte ikke dekode PKCS #12-fil. Passordet kan være feil.
 PKCS12DecodeErr=Klarte ikke dekode filen. Enten er den ikke i PKCS #12-format, er korruptert, eller så er det oppgitte passordet feil.
 PKCS12UnknownErrRestore=Klarte ikke gjenopprette PKCS #12-filen av ukjente grunner.
 PKCS12UnknownErrBackup=Klarte ikke opprette PKCS #12 sikkerhetskopi-fil av ukjent årsak.
@@ -318,7 +318,7 @@ AddModulePrompt=Er du sikker på at du vil installere denne sikkerhetsmodulen?
 AddModuleName=Modulnavn: %S
 AddModulePath=Sti: %S
 AddModuleSuccess=En ny sikkerhetsmodul er installert
-AddModuleFailure=Kunne ikke legge til modul
+AddModuleFailure=Klarte ikke legge til modul
 AddModuleDup=Sikkerhetsmodulen finnes allerede.
 DelModuleBadName=Ugyldig modulnavn
 DelModuleWarning=Er du sikker på at du vil slette denne sikkerhetsmodulen?
@@ -354,8 +354,8 @@ certErrorMismatchSinglePlain=Sertifikatet er bare gyldig for %S
 certErrorMismatchMultiple=Sertifikatet er bare gyldig for følgende navn:
 certErrorMismatchNoNames=Sertifikatet er ikke gyldig for noen tjenernavn.
 
-certErrorExpired=Sertifikatet er utgått på dato fra den %S.
-certErrorNotYetValid=Sertifikatet er ikke gyldig inntil %S.
+certErrorExpired=Sertifikatet gikk ut på dato den %S.
+certErrorNotYetValid=Sertifikatet er ikke gyldig før %S.
 
 certErrorCodePrefix=(Feilkode: %S)
 
@@ -368,12 +368,12 @@ CertInfoPurposes=Formål
 CertInfoEmail=E-post
 CertInfoStoredIn=Lagret i:
 P12DefaultNickname=Importert sertifikat
-CrlImportFailure1x=Programmet klarer ikke å importere listen over opphevede sertifikater (CRL).
-CrlImportFailureExpired=En nyere versjon av denne CRLen er tilgjengelig.
+CrlImportFailure1x=Programmet klarer ikke å importere listen over tilbakekalte sertifikater (CRL).
+CrlImportFailureExpired=En nyere versjon av denne CRL-en er tilgjengelig.
 CrlImportFailureBadSignature=CRL har ugyldig signatur.
 CrlImportFailureInvalid=Ny CRL har ugyldig format.
 CrlImportFailureOld=Ny CRL er eldre enn den som er aktiv nå.
-CrlImportFailureNotYetValid=CRL er ikke gyldig ennå. Kontroller at klokka på datamaskinen er riktig.
+CrlImportFailureNotYetValid=CRL er ikke gyldig ennå. Kontroller at klokken på datamaskinen er riktig.
 CrlImportFailureNetworkProblem=Nedlasting av CRL feilet på grunn av nettverksproblemer.
 CrlImportFailureReasonUnknown=Feil ved import av CRL til lokal database. Feilkode:
 CrlImportFailure2=Spør systemansvarlig om hjelp.
@@ -381,7 +381,7 @@ NSSInitProblemX=Klarte ikke initiere programmets sikkerhetskomponent. Den mest s
 ProfileSwitchSocketsStillActive=Operasjonen kan ikke fullføres fordi en intern feil oppstod. En sikker kommunikasjonskanal har ikke blitt ryddet opp skikkelig.
 ProfileSwitchCryptoUIActive=Denne operasjonen er umulig akkurat nå. Fullfør operasjonen som vil ha oppmerksomheten din i et annet vindu.
 VerifyExpired=<Utgått>
-VerifyRevoked=<Opphevet>
+VerifyRevoked=<Tilbakekalt>
 VerifyNotTrusted=<Ikke tiltrodd>
 VerifyIssuerNotTrusted=<Utsteder er ikke tiltrodd>
 VerifyIssuerUnknown=<Utsteder ukjent>
@@ -389,7 +389,7 @@ VerifyInvalidCA=<Ugyldig CA>
 VerifyUnknown=<Ukjent>
 CertUser=Ditt sertifikat
 CertCA=CA (sertifikatutsteder)
-CertSSL=SSL tjener
+CertSSL=SSL-tjener
 CertEmail=Peer S/MIME
 CertUnknown=Ukjent
 CertNoNickname=(uten kallenavn)
@@ -398,7 +398,7 @@ NicknameExpired=(utgått)
 NicknameNotYetValid=(ikke gyldig ennå)
 CaCertExists=Dette sertifikatet er allerede installert som en sertifikatutsteder.
 NotACACert=Dette er ikke en sertifikatautoritets sertifikat, så det kan ikke importeres i listen over sertifikatautoriteter.
-NotImportingUnverifiedCert=Dette sertifikatet kunne ikke bli verifisert og vil ikke bli importert. Sertifikat-utstederen kan muligens være ukjent eller ikke tiltrodd, sertifikatet kan være utgått eller opphevet, eller sertifikatet kan muligens ikke være godkjent.
+NotImportingUnverifiedCert=Klarte ikke verifisere dette sertifikatet, og vil derfor ikke importere det. Sertifikatutstederen kan muligens være ukjent eller ikke tiltrodd, sertifikatet kan være utgått eller tilbakekalt, eller sertifikatet kan muligens ikke være godkjent.
 UserCertIgnoredNoPrivateKey=Dette personlige sertifikatet kan ikke installeres siden du ikke har den tilhørende private nøkkelen som ble opprettet når sertifikatet ble opprettet.
 UserCertImported=Ditt personlige sertifikat er installert. Du bør oppbevare en sikkerhetskopi av dette sertifikatet.
 CertOrgUnknown=(Ukjent)
