--- a/nb-NO/security/manager/chrome/pipnss/security.properties
+++ b/nb-NO/security/manager/chrome/pipnss/security.properties
@@ -41,8 +41,8 @@ MixedContentMessage=Du har forespurt en kryptert nettside som inneholder noe ukr
 LeaveSecureMessage=Du forlater nå en kryptert nettside. Informasjonen du sender eller mottar fra nå av kan enkelt bli lest av en tredjepart.
 EnterSecureMessage=Du har forespurt en kryptert nettside. Nettstedet har identifisert seg selv korrekt, og informasjonen du ser eller skriver inn kan ikke enkelt bli lest av en tredjepart.
 WeakSecureMessage=Du har forespurt en nettside som bruker lavgradskryptering. Nettstedet har identifisert seg korrekt, men informasjonen du ser eller skriver inn på denne siden kan enkelt bli lest av en tredjepart.
-PostToInsecureFromSecureMessage=Selv om denne siden er kryptert, vil informasjonen du skriver inn bli sendt over en ukryptert tilkobling, og kan enkelt bli lest av en tredjepart.\#\#Er du sikker på at du vil fortsette med å sende denne informasjonen?##
-PostToInsecureFromInsecureMessage=Informasjonen du har skrevet inn vil bli sendt over en ukryptert forbindelse og kan enkelt bli lest av en tredjepart.\#\#Er du sikker på at du vil sende denne informasjonen?##
+PostToInsecureFromSecureMessage=Selv om denne siden er kryptert, vil informasjonen du skriver inn bli sendt over en ukryptert tilkobling, og kan enkelt bli lest av en tredjepart.##Er du sikker på at du vil fortsette med å sende denne informasjonen?##
+PostToInsecureFromInsecureMessage=Informasjonen du har skrevet inn vil bli sendt over en ukryptert forbindelse og kan enkelt bli lest av en tredjepart.##Er du sikker på at du vil sende denne informasjonen?##
 MixedContentShowAgain=Gi advarsel når en skal til å vise en kryptert side som inneholder ukryptert informasjon.
 LeaveSecureShowAgain=Gi advarsel når en forlater krypterte sider til en som ikke er kryptert.
 EnterSecureShowAgain=Gi advarsel når en skal til å vise en kryptert side.
