Bug 476175 - Add search bar to Cookie Manager (Stored Cookies tab). r+sr=Neil.

--- a/nl/suite/chrome/common/permissions/cookieViewer.properties
+++ b/nl/suite/chrome/common/permissions/cookieViewer.properties
@@ -53,3 +53,6 @@ deleteAllCookiesYes=&Verwijderen
 deleteAllCookiesSites = Weet u zeker dat u alle cookieswebpagina’s wilt verwijderen?
 deleteAllSitesTitle = Alle webpagina’s verwijderen
 deleteAllSitesYes=&Verwijderen
+deleteSelectedCookies=Weet u zeker dat u alle geselecteerde cookies wilt verwijderen?
+deleteSelectedCookiesTitle=Geselecteerde cookies verwijderen
+deleteSelectedCookiesYes=&Verwijderen
