--- a/nl/suite/chrome/mailnews/messenger.properties
+++ b/nl/suite/chrome/mailnews/messenger.properties
@@ -421,3 +421,8 @@ emptyTrashDontAsk=Mij niet opnieuw vragen.
 # junkCommands.js
 junkAnalysisPercentComplete= %S ongewenste-berichtenanalyse compleet
 processingJunkMessages=Ongewenste berichten verwerken
+
+# Messenger bootstrapping messages
+fileNotFoundTitle = Bestand niet gevonden
+#LOCALIZATION NOTE(fileNotFoundMsg): %S is the filename
+fileNotFoundMsg = Het bestand %S bestaat niet.
