Bug 461711: rebrand 'RSS News & Blogs' to 'Blogs & News Feeds'. r=philor, sr=neil

--- a/nl/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/nl/mail/chrome/messenger-newsblog/newsblog.properties
@@ -1,33 +1,35 @@
-# Status strings used in the subscribe dialog
-
-subscribe-validating=RSS-feed verifiëren…
+subscribe-validating-feed=Feed verifiëren…
 subscribe-cancelSubscription=Weet u zeker dat u het inschrijven op de huidige feed wilt annuleren? 
 subscribe-cancelSubscriptionTitle=Inschrijven op een feed…
-subscribe-noFeedSelected=<geen RSS-feed geselecteerd>
+subscribe-noFeedIsSelected=<geen feed geselecteerd>
 subscribe-feedAlreadySubscribed=U hebt zich reeds ingeschreven op deze feed.
 subscribe-errorOpeningFile=Kan bestand niet openen.
 
 subscribe-OPMLImportTitle=Selecteer OPML-bestand om te importeren
 subscribe-OPMLExportTitle=Exporteer feeds als een OPML-bestand
-subscribe-OPMLExportFileTitle=Thunderbird OPML-export
-subscribe-OPMLExportFileName=MijnThunderbirdFeeds.opml
-#LOCALIZATION NOTE: %S is the name of the OPML file the user tried to import.
+## LOCALIZATION NOTE(subscribe-OPMLExportFileDialogTitle): %S is the brandShortName
+subscribe-OPMLExportFileDialogTitle=%S OPML-export
+## LOCALIZATION NOTE(subscribe-OPMLExportDefaultFileName): %S is the brandShortName
+subscribe-OPMLExportDefaultFileName=My%SFeeds.opml
+## LOCALIZATION NOTE(subscribe-errorInvalidOPMLFile): %S is the name of the OPML file the user tried to import.
 subscribe-errorInvalidOPMLFile=%S is geen geldig OPML-bestand, of er is een fout opgetreden bij het importeren.
 
 subscribe-OPMLExportOPMLFilesFilterText=OPML-bestanden
 
-#LOCALIZATION NOTE: %S is the name of the feed the user wants to unsubscribe from.
 subscribe-confirmFeedDeletionTitle=Feed verwijderen
+## LOCALIZATION NOTE(subscribe-confirmFeedDeletion): %S is the name of the feed the user wants to unsubscribe from.
 subscribe-confirmFeedDeletion=Weet u zeker dat u zich wilt uitschrijven van de feed: \n %S?
 
-# when downloading new feed items from the subscribe dialog. 
-# LOCALIZATION NOTE: Do not translate %d in the following line.
-# The first %S will receive the number of messages received so far;
-# the second %S will receive the total number of messages
-subscribe-fetchingFeedItems=Feedartikelen downloaden (%S van %S)
+## LOCALIZATION NOTE(subscribe-gettingFeedItems):
+##  - The first %S is the number of articles processed so far;
+##  - The second %S is the total number of items
+subscribe-gettingFeedItems=Feedartikelen downloaden (%S van %S)…
 
 newsblog-noNewArticlesForFeed=Er zijn geen nieuwe artikelen voor deze feed.
+newsblog-networkErrorTitle=Netwerkfout
+## LOCALIZATION NOTE(newsblog-networkError): %S is the feed URL
 newsblog-networkError=%S kon niet worden gevonden. Controleer de naam en probeer opnieuw.
-newsblog-invalidFeed=%S is geen geldige RSS-feed.
-newsblog-getNewMailCheck=RSS-feeds controleren op nieuwe items
-
+newsblog-feedNotValidTitle=Ongeldige feed
+## LOCALIZATION NOTE(newsblog-feedNotValid): %S is the feed URL
+newsblog-feedNotValid=%S is geen geldige feed.
+newsblog-getNewMsgsCheck=Feeds controleren op nieuwe items…
