Bug 482480 - Text on provided identity information seems contradicting.

--- a/fr/browser/chrome/browser/pageInfo.properties
+++ b/fr/browser/chrome/browser/pageInfo.properties
@@ -74,7 +74,6 @@ feedRss=RSS
 feedAtom=Atom
 feedXML=XML
 
-securityCertText=Ce site Web fournit un certificat pour vérifier son identité.
-securityNoIdentity=Ce site Web ne fournit pas d'informations concernant son identité.
+securityNoOwner=Ce site Web ne fournit pas d'informations sur son propriétaire.
 securityOneVisit=Oui, une fois
 securityNVisits=Oui, %S fois
