browser and mobile update

--- a/cs/browser/chrome/browser/pageInfo.properties
+++ b/cs/browser/chrome/browser/pageInfo.properties
@@ -74,7 +74,6 @@ feedRss=RSS
 feedAtom=Atom
 feedXML=XML
 
-securityCertText=Tato stránka k ověření své identity poskytuje certifikát
-securityNoIdentity=Tato stránka neposkytuje informace k ověření své identity
+securityNoOwner=Tato stránka neposkytuje informace o vlastníkovi
 securityOneVisit=Ano, jednou
 securityNVisits=Ano, %S krát
