--- a/cs/extensions/irc/chrome/chatzilla.properties
+++ b/cs/extensions/irc/chrome/chatzilla.properties
@@ -22,7 +22,7 @@
 #   Chiaki Koufugata, original author
 #   Robert Ginda, rginda@netscape.com, owner/maintainer
 #   James Ross, twpol@aol.com, pref pages code
-#   
+#
 # Alternatively, the contents of this file may be used under the terms of
 # either the GNU General Public License Version 2 or later (the "GPL"), or
 # the GNU Lesser General Public License Version 2.1 or later (the "LGPL"),
@@ -89,14 +89,14 @@ msg.confirm=Potvrdit
 
 ### Notes for localizers ###
 #
-# ChatZilla uses cmd.<command name>.* to construct the command's help, 
+# ChatZilla uses cmd.<command name>.* to construct the command's help,
 # parameters and any UI labels. For the command to continue to function, the
 # *.params entries MUST NOT BE CHANGED. Hopefully in the future you will be
 # able to localize these items as well.
 #
 ### DO NOT LOCALIZE THE *.params STRINGS ###
 #
-# All localised strings may contain certain entities for branding purposes. 
+# All localised strings may contain certain entities for branding purposes.
 # The three standard brand entities (brandShortName, brandFullName, vendorName)
 # can all be used like this:
 #     foo.bar=Some text used in &brandFullName;!
@@ -304,7 +304,7 @@ cmd.except.help=Vyloučí uživatele ze zákazu na kanálu. Měl by být uveden 
 
 cmd.exit.label=U&končit ChatZillu
 cmd.exit.params=[<reason>]
-cmd.exit.help=Provede odpojení ze všech aktivních serverů a sítí. Jestliže je uveden <reason>, uvede se. V opačném případě se uvede výchozí <reason>. Po odpojení se provede ukončení ChatZilly. 
+cmd.exit.help=Provede odpojení ze všech aktivních serverů a sítí. Jestliže je uveden <reason>, uvede se. V opačném případě se uvede výchozí <reason>. Po odpojení se provede ukončení ChatZilly.
 
 cmd.exit-mozilla.label=&Konec
 cmd.exit-mozilla.help=Ukončit
@@ -626,7 +626,7 @@ cmd.quit.label=&Zavřít okno
 cmd.quit.params=[<reason>]
 cmd.quit.help=Ukončí ChatZillu.
 
-cmd.quit-mozilla.label=&Ukončit 
+cmd.quit-mozilla.label=&Ukončit
 cmd.quit-mozilla.help=Ukončí Mozillu
 
 cmd.quote.params=<irc-command>
@@ -1039,7 +1039,7 @@ msg.ctcphelp.source=SOURCE returns an address where you can obtain the client
 msg.ctcphelp.os=OS navrátí klientův operační systém a verzi
 msg.ctcphelp.host=HOST vrátí klintovu aplikaci a verzi
 msg.ctcphelp.ping=PING napíše parametr zaslaný klientovi
-msg.ctcphelp.dcc=DCC vyžaduje přímé spojení 
+msg.ctcphelp.dcc=DCC vyžaduje přímé spojení
 
 # DCC CHAT messages.
 msg.dccchat.sent.request=Odeslána nabídka na DCC Chat uživateli ``%S'' (%S:%S) %S.
@@ -1077,7 +1077,7 @@ msg.dccfile.err.notreadable=Nelze číst určený soubor.
 # General DCC messages.
 msg.dcc.pending.matches="%S čekající příchozí nabídka DCC nalezena.
 msg.dcc.accepted.matches="%S DCC spojení nalezeno.
-msg.dcc.matches.help=Aby se dal požadavek nalézt, musíte uvést dostatečně velkou část uživatelovi přezdívky, nebo uvést i typ požadavku, případně jméno souboru.  
+msg.dcc.matches.help=Aby se dal požadavek nalézt, musíte uvést dostatečně velkou část uživatelovi přezdívky, nebo uvést i typ požadavku, případně jméno souboru.
 
 msg.dcc.not.enabled=DCC je zakázáno. Pokud potřebujete funkci DCC, musíte ji zapnout v okně předvoleb.
 msg.dcc.not.possible=DCC není v této verzi a na této platformě (např. Mozilla, Firerox) dostupný - chybí vlastnost "scriptable server socket". Mozilla novější než z 2003-11-15 (t.j. Mozilla 1.6 a novější) by již měli tuto vlastnost mít.
@@ -1371,7 +1371,7 @@ datetime.presets.ux=%H:%M:%S
 # We only allow one pref window open at once, this occurs when a 2nd is opened.
 msg.prefs.alreadyOpen=Předvolby ChatZilly jsou již otevřeny.
 
-msg.prefs.err.save=Při pokusu o ukládání předvoleb se vyskytla vyjímka: %S.
+msg.prefs.err.save=Při pokusu o ukládání předvoleb se vyskytla výjimka: %S.
 
 msg.prefs.browse=Procházet…
 msg.prefs.browse.title=Otevřít soubor
@@ -1436,7 +1436,7 @@ pref.conference.limit.help=Když počet uživatelů v kanálu o dost překračuj
 pref.connectTries.label=Pokusů o připojení
 pref.connectTries.help=Počet pokusů, které ChatZilla uskuteční pro připojení k serveru nebo síti.
 pref.copyMessages.label=Kopírovat důležité zprávy
-pref.copyMessages.help=Pokud je tato volba nastavena, jakákoli zpráva označená jako "důležitá" bude také zkopírována do okna informací sítě. Umožní vám odejít na dlouhý čas a přesto nepropást žádnou důležitou zprávu pro vás. 
+pref.copyMessages.help=Pokud je tato volba nastavena, jakákoli zpráva označená jako "důležitá" bude také zkopírována do okna informací sítě. Umožní vám odejít na dlouhý čas a přesto nepropást žádnou důležitou zprávu pro vás.
 pref.dcc.enabled.label=DCC povoleno
 pref.dcc.enabled.help=Pokud je zakázáno, žádný z DCC příkazů nic neprovede a DCC požadavky od ostatních uživatelů budou zcela ignorovány.
 pref.dcc.autoAccept.list.label=Seznam automatického přijetí
@@ -1627,7 +1627,7 @@ pref.group.global.label=Globální
 pref.group.global.header.label=Hlavičky
 pref.group.global.header.help=Nastaví předvolené hlavičky oken. Každé okno může toto nastavení přebít.
 pref.group.global.links.label=Odkazy
-pref.group.global.links.help=Tyto tři volby odkazů určují jak bude ChatZilla reagovat na různé způsoby kliknutí na odkazy. Můžete je změnit podle svých potřeb. 
+pref.group.global.links.help=Tyto tři volby odkazů určují jak bude ChatZilla reagovat na různé způsoby kliknutí na odkazy. Můžete je změnit podle svých potřeb.
 pref.group.global.log.label=Zaznamenávat tyto typy oken.
 pref.group.global.log.help=Nastaví předvolený způsob záznamů oken. Každé okno si ho ale může nastavit vlastní.
 pref.group.global.maxLines.label=Velikost historie
