update calendar dir

--- a/si/calendar/chrome/calendar/calendar.properties
+++ b/si/calendar/chrome/calendar/calendar.properties
@@ -47,12 +47,12 @@ newEvent=නව වැඩසටහන
 # Titles for the event/task dialog
 newEventDialog=නව වැඩසටහන
 editEventDialog=වැඩසටහන සකසන්න
-newTaskDialog=නව කාර්‍යය
-editTaskDialog=කාර්‍යය සකසන්න
+newTaskDialog=නව කාර්යය
+editTaskDialog=කාර්යය සකසන්න
 
 # Do you want to save changes?
 askSaveTitleEvent=වැඩසටහන සුරකින්න
-askSaveTitleTask=කාර්‍යය සුරකින්න
+askSaveTitleTask=කාර්යය සුරකින්න
 askSaveMessageEvent=Event has not been saved. Do you want to save the event?
 askSaveMessageTask=Task has not been saved. Do you want to save the task?
 
@@ -67,7 +67,7 @@ untitledCalendarName=නිර්ණාමික දිනදර්ශනය
 # Event status: Tentative, Confirmed, Cancelled
 # ToDo task status: NeedsAction, InProcess, Completed, Cancelled
 statusTentative  =තාවකාලීක
-statusConfirmed  =ස්තිර
+statusConfirmed  =ස්ථිර
 statusCancelled  =අහෝසි කළ
 statusNeedsAction=ක්‍රීයාවක් අවශ්‍ය
 statusInProcess  =සිදුවෙමින් පවතී
@@ -114,14 +114,14 @@ None=කිසිවක් නැත
 tooNewSchemaErrorBoxTitle=Your calendar data isn't compatible with this version of %1$S
 tooNewSchemaErrorBoxTextLightning=The calendar data in your profile was updated by a newer version of %1$S, and continuing will probably cause the information to be lost or corrupted. %1$S will now be disabled and %2$S restarted.
 tooNewSchemaErrorBoxTextSunbird=The calendar data in your profile was updated by a newer version of %1$S, and continuing will probably cause the information to be lost or corrupted. %1$S will now quit.
-tooNewSchemaButtonRestart=%1$S යළි අරභන්න
+tooNewSchemaButtonRestart=%1$S යළි අරඹන්න
 tooNewSchemaButtonQuit=%1$S ඉවත් වීම
 
 # List of events or todos (unifinder)
 eventUntitled=නිර්ණාමික
 
 # Tooltips of events or todos
-tooltipTitle    =යමාතෘකාව:
+tooltipTitle    =මාතෘකාව:
 tooltipLocation =පිහිටීම:
 # event date, usually an interval, such as
 #  Date: 7:00--8:00 Thu 9 Oct 2011
@@ -132,14 +132,13 @@ tooltipStatus   =තත්ත්වය:
 # task/todo fields
 # start date time, due date time, task priority number, completed date time
 tooltipStart    =ආරම්භය:
-tooltipDue      =දියයුතු :
+tooltipDue      =දියයුතු:
 tooltipPriority =ප්‍රමුඛතාවය:
 tooltipPercent  =% අවසන්:
 tooltipCompleted=අවසන්:
 #deleteTaskAccesskey=l
 genericErrorTitle=දෝෂයක් සිදුවී ඇත
 severalShortCalendarWeeks=CWs: %1$S-%2$S
-shortCalendarWeek=CW: %1$S
 unknownTimezoneInItem=Unknown timezone "%1$S" in "%2$S".  Treated as 'floating' local timezone instead: %3$S
 #File commands and dialogs
 New=නව
@@ -320,10 +319,28 @@ updatesItem_pending=Apply Downloaded Update Now…
 updatesItem_pendingFallback=Apply Downloaded Update Now…
 
 # Alarm Dialog
-alarmWindowTitle=%1$S Reminders
+# LOCALIZATION NOTE (alarmWindowTitle.label): Semi-colon list of plural
+# forms. See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+alarmWindowTitle.label=#1 Reminder;#1 Reminders
+
+# LOCALIZATION NOTE (alarmStarts):
+# used for a display the start of an alarm like 'Starts:  Thu 2 Oct 2008 13:21'
+#    %1$S will be replaced with a date-time
 alarmStarts=Starts: %1$S
+
+# LOCALIZATION NOTE (alarmTodayAt):
+# used for a display the date-time of an alarm like 'Today at Thu 2 Oct 2008 13:21'
+#    %1$S will be replaced with a date-time
 alarmTodayAt=Today at %1$S
+
+# LOCALIZATION NOTE (alarmTomorrowAt):
+# used for a display the date-time of an alarm like 'Tomorrow at Thu 2 Oct 2008 13:21'
+#    %1$S will be replaced with a date-time
 alarmTomorrowAt=Tomorrow at %1$S
+
+# LOCALIZATION NOTE (alarmYesterdayAt):
+# used for a display the date-time of an alarm like 'Yesterday at Thu 2 Oct 2008 13:21'
+#    %1$S will be replaced with a date-time
 alarmYesterdayAt=Yesterday at %1$S
 
 # Alarm interface strings
@@ -360,10 +377,34 @@ eventDetailsStartDate=Start:
 eventDetailsEndDate=End:
 taskDetailsStartDate=Start Date:
 taskDetailsEndDate=Due Date:
+
+# LOCALIZATION NOTE (datetimeWithTimezone):
+# used for a display of a date-time with timezone 'Thu 2 Oct 2008 13:21', Europe/Paris
+#    %1$S will be replaced with the completion date-time
+#    %2$S will be replaced with the name of the timezone
 datetimeWithTimezone=%1$S, %2$S
 
-longCalendarWeek=Calendar Week: %1$S
+# LOCALIZATION NOTE (singleLongCalendarWeek):
+# used for display of calendar weeks in short form like 'Calendar Week 43'
+#    %1$S will be replaced with the index of the week
+singleLongCalendarWeek=Calendar Week: %1$S
+
+# LOCALIZATION NOTE (severalLongCalendarWeeks):
+# used for display of calendar weeks in short form like 'Calendar Weeks 43 - 45'
+#    %1$S will be replaced with the index of the start-week
+#    %2$S will be replaced with the index of the end-week
 severalLongCalendarWeeks=Calendar Weeks %1$S-%2$S
+
+# LOCALIZATION NOTE (singleShortCalendarWeek):
+# used for display of calendar weeks in short form like 'CW 43'
+#    %1$S will be replaced with the index of the week
+singleShortCalendarWeek=CW: %1$S
+
+# LOCALIZATION NOTE (severalShortCalendarWeeks):
+# used for display of calendar weeks in short form like 'CWs 43 - 45'
+#    %1$S will be replaced with the index of the start-week
+#    %2$S will be replaced with the index of the end-week
+severalShortCalendarWeeks=CWs: %1$S-%2$S
 
 oneDayBack=One Day Back
 oneDayForward=One Day Forward
@@ -374,15 +415,10 @@ oneWeekForward=One Week Forward
 gotoToday=Go to Today
 
 # Task tree, "Due In" column.
-dueInDays1=1 day
-# Used for "2 days"
-dueInDays2=2 days
-# Used for more than 2 days
-dueInDaysN=%1$S days
-
-dueInHours1=1 hour
-dueInHours2=2 hours
-dueInHoursN=%1$S hours
+# LOCALIZATION NOTE (dueInDays, dueInHours): Semi-colon list of plural
+# forms. See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+dueInDays=#1 day;#1 days
+dueInHours=#1 hour;#1 hours
 dueInLessThanOneHour=< 1 hour
 
 # LOCALIZATION NOTE (monthInYear):
@@ -436,8 +472,27 @@ datetimeIntervalOnSameDay=%1$S %2$S – %3$S
 #    %4$S will be replaced with the time of the end date
 datetimeIntervalOnSeveralDays=%1$S %2$S – %3$S %4$S
 
+# LOCALIZATION NOTE (datetimeIntervalTaskWithoutDate):
+# used for task without start and due date
+# (showed only in exported calendar in Html format)
+datetimeIntervalTaskWithoutDate= no start or due date
+# LOCALIZATION NOTE (datetimeIntervalTaskWithoutDueDate):
+# used for intervals in task with only start date
+# displayed form is 'start date 5 Jan 2006 13:00'
+# (showed only in exported calendar in Html format)
+#    %1$S will be replaced with the date of the start date
+#    %2$S will be replaced with the time of the start date
+datetimeIntervalTaskWithoutDueDate=start date %1$S %2$S
+# LOCALIZATION NOTE (datetimeIntervalTaskWithoutStartDate):
+# used for intervals in task with only due date
+# displayed form is 'due date 5 Jan 2006 13:00'
+# (showed only in exported calendar in Html format)
+#    %1$S will be replaced with the date of the due date
+#    %2$S will be replaced with the time of the due date
+datetimeIntervalTaskWithoutStartDate=due date %1$S %2$S
+
 deleteTaskLabel=Delete Task
-deletetaskAccesskey=l
+deleteTaskAccesskey=l
 deleteItemLabel=Delete
 deleteItemAccesskey=l
 deleteEventLabel=Delete Event
