--- a/si/calendar/chrome/calendar/calendar-event-dialog.properties
+++ b/si/calendar/chrome/calendar/calendar-event-dialog.properties
@@ -37,17 +37,27 @@
 #
 # ***** END LICENSE BLOCK *****
 
-repeatDetailsRuleDaily1=සෑම දිනකම
-repeatDetailsRuleDaily2=දවසක් හැර දවසක්
-repeatDetailsRuleDaily3=සෑම %1$S දිනකම
-repeatDetailsRuleDaily4=සෑම සතියේ දිනකම
+# LOCALIZATION NOTE (dailyEveryNth):
+# Edit recurrence window -> Recurrence pattern -> Daily repeat rules
+# #1 - number
+# e.g. "every 4 days"
+dailyEveryNth=every day;every #1 days
+repeatDetailsRuleDaily4=every weekday
 
-repeatDetailsRuleWeekly1=සෑම %1$S
-repeatDetailsRuleWeekly2=%1$S හි සතියක් හැර සතියක්
-repeatDetailsRuleWeekly3=%2$S හි සෑම %1$S සතියකම
-repeatDetailsRuleWeekly4=සෑම සතියකම
-repeatDetailsRuleWeekly5=සතියක් හැර සතියක්
-repeatDetailsRuleWeekly6=සෑම %1$S සතියකම
+# LOCALIZATION NOTE (weeklyNthOn)
+# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# %1$S - weekday (one or more)
+# #2 - week interval
+# e.g. "every 3 weeks on Tuesday, Wednesday and Thursday
+weeklyNthOn=every %1$S;every #2 weeks on %1$S
+
+# LOCALIZATION NOTE (weeklyNthOn)
+# Edit recurrence window -> Recurrence pattern -> Weekly repeat rules
+# #1 - interval
+# e.g. "every 5 weeks"
+weeklyEveryNth=every week;every #1 weeks
+
+repeatDetailsRuleDaily4=සෑම සතියේ දිනකම
 
 repeatDetailsDay1=ඉරිදා
 repeatDetailsDay2=සදුදා
@@ -56,17 +66,41 @@ repeatDetailsDay4=බදාදා
 repeatDetailsDay5=බ්‍රහස්පතින්දා
 repeatDetailsDay6=සිකුරාදා
 repeatDetailsDay7=සෙනසුරාදා
+
+# LOCALIZATION NOTE (repeatDetailsAnd)
+# Used to show a number of weekdays in a list
+# i.e. "Sunday, Monday, Tuesday " + and + " Wednesday"
 repeatDetailsAnd=සහ
 
-repeatDetailsRuleMonthly=සෑම මසකම %1$S %2$S
-repeatDetailsRuleMonthly2=මාසයක් හැර මාසයක්  %1$S %2$S
-repeatDetailsRuleMonthly3=the %1$S %2$S of every %3$S month
-repeatDetailsRuleMonthly4=සෑම මසකම %1$S දින
-repeatDetailsRuleMonthly5=මාසයක් හැර මාසයක් %1$S දින
-repeatDetailsRuleMonthly6=day %1$S of every %2$S month
-repeatDetailsRuleMonthly7=මාසයේ අවසාන දින
-repeatDetailsRuleMonthly8=මාසයක් හැර මාසයක් මාසයේ අවසාන දින
-repeatDetailsRuleMonthly9=සෑම %1$S ම මාසයේ අවසාන දින
+# LOCALIZATION NOTE (monthlyNthOfEvery):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - ordinal
+# %2$S - weekday
+# #3 - interval
+# i.e. "the FIRST MONDAY of every 3 months"
+monthlyNthOfEvery=the %1$S %2$S of every month;the %1$S %2$S of every #3 months
+
+# LOCALIZATION NOTE (monthlyEveryOfEvery):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - weekday
+# #2 - interval
+# i.e. "every MONDAY of every 3 months" 
+#  more specific: every monday of January, April, July, October
+monthlyEveryOfEvery=every %1$S of every month;every %1$S of every #2 months
+
+# LOCALIZATION NOTE (monthlyDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - day of month
+# #2 - month interval
+# e.g. "day 3 of every 2 months"
+monthlyDayOfNth=day %1$S of every month;day %1$S of every #2 months
+
+# LOCALIZATION NOTE (monthlyLastDayOfNth):
+# Edit recurrence window -> Recurrence pattern -> Monthly repeat rules
+# %1$S - day of month
+# #2 - month interval
+# e.g. "the last day of every 3 months"
+monthlyLastDayOfNth=the last day of the month; the last day of every #1 months
 
 repeatDetailsOrdinal1=පළමු
 repeatDetailsOrdinal2=දෙවන
@@ -75,12 +109,32 @@ repeatDetailsOrdinal4=සිව්වන
 repeatDetailsOrdinal5=පස්වන
 repeatDetailsOrdinal-1=අවසාන
 
-repeatDetailsRuleYearly1=සෑම %1$S %2$S
-repeatDetailsRuleYearly2=every other year on %1$S %2$S 
-repeatDetailsRuleYearly3=every %3$S years on %1$S %2$S
-repeatDetailsRuleYearly4=the %1$S %2$S of %3$S
-repeatDetailsRuleYearly5=every other year the %1$S %2$S of %3$S
-repeatDetailsRuleYearly6=every %4$S years the %1$S %2$S of %3$S
+# LOCALIZATION NOTE (yearlyNthOn):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - month
+# %2$S - day of month
+# #3 - yearly interval
+# e.g. "every 3 years on December 14"
+yearlyNthOn=every %1$S %2$S;every #3 years on %1$S %2$S
+
+# LOCALIZATION NOTE (yearlyNthOnNthOf):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - ordinal
+# %2$S - weekday
+# %3$S - month
+# #4 - number
+# e.g. "the second Monday of every March"
+# e.g  "every 3 years the second Monday of March"
+yearlyNthOnNthOf=the %1$S %2$S of every %3$S;every #4 years on the %1$S %2$S of %3$S
+
+# LOCALIZATION NOTE (yearlyNthOfNth):
+# Edit recurrence window -> Recurrence pattern -> Yearly repeat rules
+# %1$S - weekday
+# %2$S - month
+# #3 - number
+# e.g. "every Thursday of March"
+# e.g  "every 3 years on every Thursday of March"
+yearlyOnEveryNthOfNth=every %1$S of %2$S;every #3 years on every %1$S of %2$S
 
 repeatDetailsMonth1=ජනවාරි
 repeatDetailsMonth2=පෙබරවාරි
@@ -95,32 +149,80 @@ repeatDetailsMonth10=ඔක්තොමබර්
 repeatDetailsMonth11=නොවැම්බර්
 repeatDetailsMonth12=දෙසැම්බර්
 
-repeatDetailsCount=Occurs %1$S\neffective %2$S for %3$S times\nfrom %4$S to %5$S.
-repeatDetailsCountAllDay=Occurs %1$S\neffective %2$S for %3$S times.
+# LOCALIZATION NOTE (repeatCount):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event start time (e.g. hh:mm (PM/AM))
+# %4$S - event end time (e.g. hh:mm (PM/AM))
+# #5 - event occurence times: number
+# e.g. with repeatDetailsRuleMonthly3:
+# "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
+#  from 5:00 PM to 6:00 PM"
+# "Occurs the first Sunday of every 3 month
+#  effective 1/1/2009 for 5 times
+#  from 5:00 PM to 6:00 PM"
+repeatCount=Occurs %1$S\neffective %2$S for #5 time\nfrom %3$S to %4$S.;Occurs %1$S\neffective %2$S for #5 times\nfrom %3$S to %4$S.
+
+# LOCALIZATION NOTE (repeatCountAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# #3 - event occurence times: number
+# e.g. with repeatDetailsRuleMonthly3:
+# "Occurs the first Sunday of every 3 month
+#  only on 1/1/2009"
+# "Occurs the first Sunday of every 3 month
+#  effective 1/1/2009 for 5 times"
+repeatCountAllDay=Occurs %1$S\neffective %2$S for #3 time.;Occurs %1$S\neffective %2$S for #3 times.
+
+# LOCALIZATION NOTE (repeatDetailsUntil):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event end date (e.g. mm/gg/yyyy)
+# %4$S - event start time (e.g. hh:mm (PM/AM))
+# %5$S - event end time (e.g. hh:mm (PM/AM))
+# e.g. with repeatDetailsRuleWeekly2:
+# "Occurs every other week on Sunday and Friday
+#  effective 1/1/2009 until 1/1/2010 
+#  from 5:00 PM to 6:00 PM"
 repeatDetailsUntil=Occurs %1$S\neffective %2$S until %3$S\nfrom %4$S to %5$S.
+# LOCALIZATION NOTE (repeatDetailsUntilAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event end date (e.g. mm/gg/yyyy)
+# e.g. with repeatDetailsRuleMonthly6 and all day event:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009 until 1/1/2010"
 repeatDetailsUntilAllDay=Occurs %1$S\neffective %2$S until %3$S.
+# LOCALIZATION NOTE (repeatDetailsInfinite):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# %3$S - event start time (e.g. hh:mm (PM/AM))
+# %4$S - event end time (e.g. hh:mm (PM/AM))
+# e.g. with repeatDetailsRuleMonthly6:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009
+#  from 5:00 PM to 6:00 PM"
 repeatDetailsInfinite=Occurs %1$S\neffective %2$S\nfrom %3$S to %4$S.
+# LOCALIZATION NOTE (repeatDetailsInfiniteAllDay):
+# Edit recurrence window -> Recurrence details link on Event/Task dialog window
+# %1%$ - repeatDetailsRule...(see above). This is the first line of the link
+# %2%$ - event start date (e.g. mm/gg/yyyy)
+# e.g. with repeatDetailsRuleMonthly6 and all day event:
+# "Occurs day 3 of every 5 month
+#  effective 1/1/2009"
 repeatDetailsInfiniteAllDay=Occurs %1$S\neffective %2$S.
 
-reminderCustomTitle=%1$S %2$S %3$S %4$S
-reminderTitleAtStartEvent=සිදුවීම ආරම්භවන මොහොත
-reminderTitleAtStartTask=කාර්යය ආරම්භවන මොහොත
-reminderTitleAtEndEvent=සිදුවීම අවසානවන මොහොත
-reminderTitleAtEndTask=කාර්යය අවසානවන මොහොත
-reminderCustomUnitMinute=මිනිත්තු
-reminderCustomUnitMinutes=මිනිත්තු
-reminderCustomUnitHour=පැය
-reminderCustomUnitHours=පැය
-reminderCustomUnitDay=දිනය
-reminderCustomUnitDays=දින
-reminderCustomRelationBefore=පෙර
-reminderCustomRelationAfter=පසු
-reminderCustomOriginBeginEvent=සිදුවීම ආරම්භයට
-reminderCustomOriginEndEvent=සිදුවීම අවසානයට
-reminderCustomOriginBeginTask=කාර්යය ආරම්භයට
-reminderCustomOriginEndTask=කාර්යය අවසානයට
-reminderErrorMaxCountReachedEvent=The selected calendar has a limitation of %1$S reminders per event.
-reminderErrorMaxCountReachedTask=The selected calendar has a limitation of %1$S reminders per task.
+# LOCALIZATION NOTE (ruleTooComplex):
+# This string is shown in the reminder details area if our code can't handle the
+# complexity of the recurrence rule yet.
+ruleTooComplex=Click here for details
+
 newEvent=නව සිදුවීමක්
 newTask=නව කාර්යයක්
 
