--- a/fy-NL/browser/chrome/browser/pageInfo.properties
+++ b/fy-NL/browser/chrome/browser/pageInfo.properties
@@ -68,14 +68,13 @@ generalStrictMode=Standert oerienkomstigheid moadus
 generalSize=%S KB (%S bytes)
 generalMetaTag=Meta (1 label)
 generalMetaTags=Meta (%S labels)
-generalSiteIdentity=Dizze Webstee wurdt beheard troch %S\nDit is bef\u00EAstige troch %S
+generalSiteIdentity=Dit webstee wurdt beheard troch %S\nDit is bef\u00EAstige troch %S
 
 
 feedRss=RSS
 feedAtom=Atom
 feedXML=XML
 
-securityCertText=Dizze webstee jout jo in sertifikaat om syn identiteit te bef\u00EAstigjen.
-securityNoIdentity=Dizze webstee jout jo gjin identiteitsynformaasje.
+securityNoOwner=Dit webstee jout jo gjin eigendomsynformaasje.
 securityOneVisit=Ja, ien kear
 securityNVisits=Ja, %S kear
